feat: endpoint create group
